Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Built from my phone 📱</h1>
+    <h1>Updated LIVE from my phone 🚀</h1>
   </body>
 </html>
