--- a/index.html
+++ b/index.html
@@ -1,6 +1,47 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>Updated LIVE from my phone 🚀</h1>
-  </body>
-</html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DJ Template | One Page</title>
+  <meta name="description" content="Professional DJ for weddings, private events, and school events. Book your date today." />
+  <style>
+    :root{
+      --bg:#0b0b10;
+      --card:#121220;
+      --text:#ffffff;
+      --muted:#b8b8d6;
+      --line:#23233a;
+      --accent:#0070f3;
+      --accent2:#7c3aed;
+      --radius:18px;
+      --shadow: 0 18px 60px rgba(0,0,0,.45);
+      --max:1100px;
+    }
+    *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
+    body{
+      margin:0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      background: radial-gradient(1200px 700px at 20% 0%, rgba(124,58,237,.25), transparent 60%),
+                  radial-gradient(1000px 600px at 100% 20%, rgba(0,112,243,.22), transparent 55%),
+                  var(--bg);
+      color:var(--text);
+    }
+    a{color:inherit; text-decoration:none}
+    .container{width:min(var(--max), 92vw); margin:0 auto}
+    .pill{
+      display:inline-flex; align-items:center; gap:8px;
+      padding:8px 12px; border:1px solid var(--line);
+      border-radius:999px; background:rgba(18,18,32,.7);
+      color:var(--muted); font-size:13px;
+      backdrop-filter: blur(8px);
+    }
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center; gap:10px;
+      padding:12px 16px;
+      border-radius:12px;
+      border:1px solid var(--line);
+      background: rgba(255,255,255,.06);
+      color:#fff;
+     
