Update DJ branding and contact information

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DJ YOURNAME | Bookings</title>
-  <meta name="description" content="Professional DJ for weddings, private events, and corporate parties. Book your date today." />
+  <title>DJ Lovett Entertainment | Atlanta DJ</title>
+  <meta name="description" content="DJ Lovett Entertainment in Atlanta, GA. Weddings, private events, corporate parties. $100/hr. Call or text 404-403-5484 to book." />
   <style>
     :root{
       --bg:#0b0b10; --card:#121220; --text:#fff; --muted:#b8b8d6;
@@ -89,7 +89,7 @@
 <header>
   <div class="container">
     <div class="nav">
-      <a class="brand" href="#top"><span class="logo"></span><span>DJ YOURNAME</span></a>
+      <a class="brand" href="#top"><span class="logo"></span><span>DJ Lovett Entertainment</span></a>
       <nav class="links" aria-label="Primary">
         <a href="#services">Services</a>
         <a href="#about">About</a>
@@ -105,18 +105,22 @@
     <div class="grid">
       <div class="card">
         <span class="pill">📍 Atlanta, GA • Weddings • Private Events • Corporate</span>
-        <h1>DJ YOURNAME</h1>
+        <h1>DJ Lovett Entertainment</h1>
         <p class="sub">
-          High-energy DJ + clean professional setup. I keep the party moving and the vibe right — from the first song to the last.
+          Clean professional setup. High energy. Great music. I keep the vibe right from the first song to the last.
+          <br><br>
+          <b>Rate:</b> $100/hr — details can be discussed based on your event.
         </p>
         <div class="cta">
           <a class="btn primary" href="#contact">Get a Quote</a>
           <a class="btn" href="tel:4044035484">Call</a>
-          <a class="btn" href="mailto:your@email.com">Email</a>
+          <a class="btn" href="sms:4044035484">Text</a>
+          <a class="btn" href="mailto:freddielovett36@gmail.com">Email</a>
         </div>
       </div>
 
       <div class="photo" aria-label="DJ photo">
+        <!-- Replace later with a real DJ Lovett photo you upload to the repo -->
         <img src="https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?auto=format&fit=crop&w=1600&q=80" alt="DJ performing" />
       </div>
     </div>
@@ -124,7 +128,7 @@
 
   <section id="services" class="section container anchor">
     <h2>Services</h2>
-    <p class="lead">Choose a vibe. I handle the music, announcements, and energy — you enjoy the event.</p>
+    <p class="lead">From weddings to parties, I bring the sound, energy, and smooth transitions so your event feels premium.</p>
     <div class="cards">
       <div class="svc">
         <h3>Weddings</h3>
@@ -132,11 +136,11 @@
       </div>
       <div class="svc">
         <h3>Private Parties</h3>
-        <p>Birthdays, graduations, reunions — custom playlists and crowd control.</p>
+        <p>Birthdays, graduations, reunions — custom playlists + requests, and real crowd control.</p>
       </div>
       <div class="svc">
         <h3>Corporate Events</h3>
-        <p>Professional vibe, punctual setup, and volume control for any venue.</p>
+        <p>Professional vibe, punctual setup, and volume control for any venue. Great for mixers & celebrations.</p>
       </div>
     </div>
   </section>
@@ -144,12 +148,13 @@
   <section id="about" class="section container anchor">
     <h2>About</h2>
     <p class="lead">
-      Put your short bio here. Example: “With 10+ years of experience, I’ve DJ’d venues, weddings, and packed parties across Atlanta.”
+      DJ Lovett Entertainment serves Atlanta and surrounding areas. Tell me your event type, your vibe, and your must-play songs —
+      I’ll handle the rest.
     </p>
     <div class="cards">
       <div class="svc">
         <h3>What you get</h3>
-        <p>Sound system • Wireless mic • Lighting • MC • Clean setup • On-time arrival</p>
+        <p>Sound system • Wireless mic • Lighting • MC (if needed) • Clean setup • On-time arrival</p>
       </div>
       <div class="svc">
         <h3>Music</h3>
@@ -157,45 +162,49 @@
       </div>
       <div class="svc">
         <h3>Pricing</h3>
-        <p>Starting at <b>$100/hr</b> (edit this). Travel fees may apply depending on location.</p>
+        <p>Starting at <b>$100/hr</b>. We can discuss full details and packages based on your event.</p>
       </div>
     </div>
   </section>
 
   <section id="contact" class="section container anchor">
     <h2>Contact & Booking</h2>
-    <p class="lead">Fast response. Tell me your date, venue, and vibe.</p>
+    <p class="lead">Fast response. Send your date, venue, hours, and the vibe you want.</p>
 
     <div class="contact">
       <div class="card">
         <h3 style="margin:0 0 10px;">Quick Contact</h3>
         <p class="sub" style="margin:0 0 14px;">
           📞 <a href="tel:4044035484">404-403-5484</a><br/>
-          ✉️ <a href="mailto:your@email.com">your@email.com</a><br/>
+          ✉️ <a href="mailto:freddielovett36@gmail.com">freddielovett36@gmail.com</a><br/>
           📍 Atlanta, GA
         </p>
         <div class="cta">
-          <a class="btn primary" href="sms:4044035484">Text Me</a>
-          <a class="btn" href="https://instagram.com/" target="_blank" rel="noreferrer">Instagram</a>
+          <a class="btn primary" href="sms:4044035484">Text to Book</a>
+          <a class="btn" href="mailto:freddielovett36@gmail.com?subject=Booking%20Request%20-%20DJ%20Lovett%20Entertainment">Email Request</a>
         </div>
-        <p class="small" style="margin-top:14px;">Tip: Replace links + info with your real details.</p>
+        <p class="small" style="margin-top:14px;">Tip: Add Instagram/TikTok links once you have them.</p>
       </div>
 
       <div class="card">
         <h3 style="margin:0 0 10px;">Booking Message</h3>
-        <form action="mailto:your@email.com" method="post" enctype="text/plain">
+        <form action="mailto:freddielovett36@gmail.com" method="post" enctype="text/plain">
           <input class="field" name="Name" placeholder="Your name" required />
           <div style="height:10px"></div>
-          <input class="field" name="Event Date" placeholder="Event date (MM/DD)" required />
+          <input class="field" name="Phone" placeholder="Your phone number" />
+          <div style="height:10px"></div>
+          <input class="field" name="Event Date" placeholder="Event date (MM/DD/YYYY)" required />
           <div style="height:10px"></div>
           <input class="field" name="Venue/City" placeholder="Venue / City" />
           <div style="height:10px"></div>
-          <textarea class="field" name="Details" placeholder="Tell me the vibe + hours needed"></textarea>
+          <input class="field" name="Hours Needed" placeholder="How many hours?" />
+          <div style="height:10px"></div>
+          <textarea class="field" name="Details" placeholder="Event type + music vibe + any must-play songs"></textarea>
           <div style="height:12px"></div>
-          <button class="btn primary" type="submit" style="width:100%;">Send</button>
+          <button class="btn primary" type="submit" style="width:100%;">Send Booking Request</button>
         </form>
         <p class="small" style="margin-top:10px;">
-          (This opens the user’s email app. Later we can add a real form.)
+          (This opens the customer’s email app. If you want a real form that collects leads automatically, tell me and I’ll add it.)
         </p>
       </div>
     </div>
@@ -204,7 +213,7 @@
 
 <footer>
   <div class="container">
-    <div class="small">© <span id="y"></span> DJ YOURNAME • Built & deployed from a phone.</div>
+    <div class="small">© <span id="y"></span> DJ Lovett Entertainment • Built & deployed from a phone.</div>
   </div>
 </footer>
 
