Change branding from DJ Lovett to DJ Love
Updated the title and branding from 'DJ Lovett Entertainment' to 'DJ Love'. Modified styles for the hero section and button design.

--- a/index.html
+++ b/index.html
@@ -3,223 +3,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DJ Lovett Entertainment | Atlanta DJ</title>
-  <meta name="description" content="DJ Lovett Entertainment in Atlanta, GA. Weddings, private events, corporate parties. $100/hr. Call or text 404-403-5484 to book." />
+  <title>DJ Love | Atlanta DJ</title>
+
   <style>
-    :root{
-      --bg:#0b0b10; --card:#121220; --text:#fff; --muted:#b8b8d6;
-      --line:#23233a; --accent:#0070f3; --accent2:#7c3aed; --radius:18px;
-      --max:1100px;
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #000;
+      color: white;
     }
-    *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{
-      margin:0;
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 700px at 20% 0%, rgba(124,58,237,.25), transparent 60%),
-        radial-gradient(1000px 600px at 100% 20%, rgba(0,112,243,.22), transparent 55%),
-        var(--bg);
+
+    .hero {
+      height: 100vh;
+      background: url("hero.png") center/cover no-repeat;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
     }
-    a{color:inherit;text-decoration:none}
-    .container{width:min(var(--max),92vw);margin:0 auto}
-    header{
-      position:sticky;top:0;z-index:50;
-      background:rgba(11,11,16,.55);
-      backdrop-filter:blur(10px);
-      border-bottom:1px solid rgba(35,35,58,.7);
+
+    .overlay {
+      background: rgba(0, 0, 0, 0.55);
+      padding: 40px;
+      border-radius: 10px;
     }
-    .nav{display:flex;align-items:center;justify-content:space-between;gap:14px;padding:14px 0}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:900;letter-spacing:.3px}
-    .logo{width:34px;height:34px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent2))}
-    .links{display:flex;gap:10px;flex-wrap:wrap;color:var(--muted);font-weight:700}
-    .links a{padding:8px 10px;border-radius:10px}
-    .links a:hover{background:rgba(255,255,255,.06);color:#fff}
-    .btn{
-      display:inline-flex;align-items:center;justify-content:center;gap:10px;
-      padding:12px 16px;border-radius:12px;border:1px solid var(--line);
-      background:rgba(255,255,255,.06);font-weight:800
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
     }
-    .btn.primary{border:none;background:linear-gradient(135deg,var(--accent),var(--accent2))}
-    .hero{padding:56px 0 18px}
-    .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:18px}
-    @media (max-width:900px){.grid{grid-template-columns:1fr}}
-    .card{
-      border:1px solid rgba(35,35,58,.9);
-      background:rgba(18,18,32,.75);
-      border-radius:var(--radius);
-      padding:20px;
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
     }
-    h1{margin:10px 0 10px;font-size:clamp(34px,5vw,54px);line-height:1.03;letter-spacing:-1px}
-    .sub{margin:0;color:var(--muted);line-height:1.6}
-    .cta{display:flex;gap:12px;flex-wrap:wrap;margin-top:18px}
-    .pill{
-      display:inline-flex;align-items:center;gap:8px;
-      padding:8px 12px;border:1px solid var(--line);
-      border-radius:999px;background:rgba(18,18,32,.7);
-      color:var(--muted);font-size:13px;
+
+    .btn {
+      display: inline-block;
+      padding: 14px 28px;
+      background: #ff3b3b;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      font-size: 1.1rem;
     }
-    .photo{
-      border:1px solid rgba(35,35,58,.9);
-      border-radius:var(--radius);
-      overflow:hidden;min-height:260px;
-      background:rgba(255,255,255,.04);
-    }
-    .photo img{width:100%;height:100%;object-fit:cover;display:block}
-    .section{padding:42px 0}
-    .section h2{margin:0 0 10px;font-size:26px}
-    .lead{margin:0 0 18px;color:var(--muted);line-height:1.65;max-width:70ch}
-    .cards{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
-    @media (max-width:900px){.cards{grid-template-columns:1fr}}
-    .svc{padding:16px;border-radius:var(--radius);border:1px solid rgba(35,35,58,.9);background:rgba(18,18,32,.75)}
-    .svc h3{margin:0 0 6px}
-    .svc p{margin:0;color:var(--muted);line-height:1.55}
-    .contact{display:grid;grid-template-columns:1fr 1fr;gap:14px}
-    @media (max-width:900px){.contact{grid-template-columns:1fr}}
-    .field{width:100%;padding:12px 12px;border-radius:12px;border:1px solid rgba(35,35,58,.9);background:rgba(255,255,255,.04);color:#fff}
-    textarea.field{min-height:120px;resize:vertical}
-    footer{border-top:1px solid rgba(35,35,58,.7);padding:26px 0 36px;color:var(--muted)}
-    .small{font-size:12px;color:var(--muted)}
-    .anchor{scroll-margin-top:90px}
   </style>
 </head>
+
 <body>
-
-<header>
-  <div class="container">
-    <div class="nav">
-      <a class="brand" href="#top"><span class="logo"></span><span>DJ Lovett Entertainment</span></a>
-      <nav class="links" aria-label="Primary">
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <a class="btn primary" href="#contact">Book Now</a>
-    </div>
-  </div>
-</header>
-
-<main id="top">
-  <section class="hero container anchor">
-    <div class="grid">
-      <div class="card">
-        <span class="pill">📍 Atlanta, GA • Weddings • Private Events • Corporate</span>
-        <h1>DJ Lovett Entertainment</h1>
-        <p class="sub">
-          Clean professional setup. High energy. Great music. I keep the vibe right from the first song to the last.
-          <br><br>
-          <b>Rate:</b> $100/hr — details can be discussed based on your event.
-        </p>
-        <div class="cta">
-          <a class="btn primary" href="#contact">Get a Quote</a>
-          <a class="btn" href="tel:4044035484">Call</a>
-          <a class="btn" href="sms:4044035484">Text</a>
-          <a class="btn" href="mailto:freddielovett36@gmail.com">Email</a>
-        </div>
-      </div>
-
-      <div class="photo" aria-label="DJ photo">
-        <!-- Replace later with a real DJ Lovett photo you upload to the repo -->
-        <img src="https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?auto=format&fit=crop&w=1600&q=80" alt="DJ performing" />
-      </div>
+  <section class="hero">
+    <div class="overlay">
+      <h1>DJ Love</h1>
+      <p>Atlanta’s Premier Event DJ</p>
+      <a class="btn" href="tel:4044035484">Book Now</a>
     </div>
   </section>
-
-  <section id="services" class="section container anchor">
-    <h2>Services</h2>
-    <p class="lead">From weddings to parties, I bring the sound, energy, and smooth transitions so your event feels premium.</p>
-    <div class="cards">
-      <div class="svc">
-        <h3>Weddings</h3>
-        <p>Ceremony + reception coverage, mic for speeches, clean transitions, and a packed dance floor.</p>
-      </div>
-      <div class="svc">
-        <h3>Private Parties</h3>
-        <p>Birthdays, graduations, reunions — custom playlists + requests, and real crowd control.</p>
-      </div>
-      <div class="svc">
-        <h3>Corporate Events</h3>
-        <p>Professional vibe, punctual setup, and volume control for any venue. Great for mixers & celebrations.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="about" class="section container anchor">
-    <h2>About</h2>
-    <p class="lead">
-      DJ Lovett Entertainment serves Atlanta and surrounding areas. Tell me your event type, your vibe, and your must-play songs —
-      I’ll handle the rest.
-    </p>
-    <div class="cards">
-      <div class="svc">
-        <h3>What you get</h3>
-        <p>Sound system • Wireless mic • Lighting • MC (if needed) • Clean setup • On-time arrival</p>
-      </div>
-      <div class="svc">
-        <h3>Music</h3>
-        <p>Hip-Hop • R&B • Afrobeats • Pop • Dancehall • Old School • Requests</p>
-      </div>
-      <div class="svc">
-        <h3>Pricing</h3>
-        <p>Starting at <b>$100/hr</b>. We can discuss full details and packages based on your event.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact" class="section container anchor">
-    <h2>Contact & Booking</h2>
-    <p class="lead">Fast response. Send your date, venue, hours, and the vibe you want.</p>
-
-    <div class="contact">
-      <div class="card">
-        <h3 style="margin:0 0 10px;">Quick Contact</h3>
-        <p class="sub" style="margin:0 0 14px;">
-          📞 <a href="tel:4044035484">404-403-5484</a><br/>
-          ✉️ <a href="mailto:freddielovett36@gmail.com">freddielovett36@gmail.com</a><br/>
-          📍 Atlanta, GA
-        </p>
-        <div class="cta">
-          <a class="btn primary" href="sms:4044035484">Text to Book</a>
-          <a class="btn" href="mailto:freddielovett36@gmail.com?subject=Booking%20Request%20-%20DJ%20Lovett%20Entertainment">Email Request</a>
-        </div>
-        <p class="small" style="margin-top:14px;">Tip: Add Instagram/TikTok links once you have them.</p>
-      </div>
-
-      <div class="card">
-        <h3 style="margin:0 0 10px;">Booking Message</h3>
-        <form action="mailto:freddielovett36@gmail.com" method="post" enctype="text/plain">
-          <input class="field" name="Name" placeholder="Your name" required />
-          <div style="height:10px"></div>
-          <input class="field" name="Phone" placeholder="Your phone number" />
-          <div style="height:10px"></div>
-          <input class="field" name="Event Date" placeholder="Event date (MM/DD/YYYY)" required />
-          <div style="height:10px"></div>
-          <input class="field" name="Venue/City" placeholder="Venue / City" />
-          <div style="height:10px"></div>
-          <input class="field" name="Hours Needed" placeholder="How many hours?" />
-          <div style="height:10px"></div>
-          <textarea class="field" name="Details" placeholder="Event type + music vibe + any must-play songs"></textarea>
-          <div style="height:12px"></div>
-          <button class="btn primary" type="submit" style="width:100%;">Send Booking Request</button>
-        </form>
-        <p class="small" style="margin-top:10px;">
-          (This opens the customer’s email app. If you want a real form that collects leads automatically, tell me and I’ll add it.)
-        </p>
-      </div>
-    </div>
-  </section>
-</main>
-
-<footer>
-  <div class="container">
-    <div class="small">© <span id="y"></span> DJ Lovett Entertainment • Built & deployed from a phone.</div>
-  </div>
-</footer>
-
-<script>
-  document.getElementById("y").textContent = new Date().getFullYear();
-</script>
-
 </body>
 </html>
