--- a/index.html
+++ b/index.html
@@ -3,30 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DJ Love | Atlanta DJ</title>
+  <title>DJ Love | Atlanta Event DJ</title>
 
   <style>
     body {
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #000;
+      font-family: Arial, sans-serif;
       color: white;
     }
 
     .hero {
       height: 100vh;
-      background: url("hero.png") center/cover no-repeat;
-      position: relative;
+      background: 
+        linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+        url("hero.png") center / cover no-repeat;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       justify-content: center;
+      align-items: center;
       text-align: center;
-    }
-
-    .overlay {
-      background: rgba(0, 0, 0, 0.55);
-      padding: 40px;
-      border-radius: 10px;
+      padding: 20px;
     }
 
     h1 {
@@ -36,29 +32,30 @@
 
     p {
       font-size: 1.2rem;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
 
     .btn {
-      display: inline-block;
-      padding: 14px 28px;
       background: #ff3b3b;
       color: white;
+      padding: 15px 30px;
+      border-radius: 8px;
       text-decoration: none;
-      font-weight: bold;
-      border-radius: 6px;
       font-size: 1.1rem;
+      font-weight: bold;
+    }
+
+    .btn:hover {
+      background: #e62e2e;
     }
   </style>
 </head>
 
 <body>
   <section class="hero">
-    <div class="overlay">
-      <h1>DJ Love</h1>
-      <p>Atlanta’s Premier Event DJ</p>
-      <a class="btn" href="tel:4044035484">Book Now</a>
-    </div>
+    <h1>DJ Love</h1>
+    <p>Atlanta’s Premier Event DJ</p>
+    <a class="btn" href="tel:4044035484">Book Now</a>
   </section>
 </body>
 </html>
