Fix image filename case in CSS background

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       height: 100vh;
       background: 
         linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-        url("hero.png") center / cover no-repeat;
+        url("hero.PNG") center / cover no-repeat;
       display: flex;
       flex-direction: column;
       justify-content: center;
